--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -3,8 +3,8 @@ title: Better Webhook
 description: A complete toolkit for webhook development - CLI for local testing, SDK for type-safe handlers.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import { Terminal, Code2 } from 'lucide-react';
+import { Cards, Card } from "fumadocs-ui/components/card";
+import { Terminal, Code2 } from "lucide-react";
 
 # Better Webhook
 
@@ -41,15 +41,15 @@ Better Webhook provides two independent tools that solve these problems:
 
 ## Quick Comparison
 
-| Need | Tool |
-|------|------|
-| Test webhooks locally without exposing ports | CLI |
-| Replay captured webhooks during debugging | CLI |
-| Use pre-built webhook templates | CLI |
-| Visual dashboard for webhook management | CLI |
-| Type-safe webhook handlers in production | SDK |
-| Automatic signature verification | SDK |
-| Zod schema validation for payloads | SDK |
+| Need                                         | Tool |
+| -------------------------------------------- | ---- |
+| Test webhooks locally without exposing ports | CLI  |
+| Replay captured webhooks during debugging    | CLI  |
+| Use pre-built webhook templates              | CLI  |
+| Visual dashboard for webhook management      | CLI  |
+| Type-safe webhook handlers in production     | SDK  |
+| Automatic signature verification             | SDK  |
+| Zod schema validation for payloads           | SDK  |
 
 ## Choose Your Path
 
@@ -58,4 +58,3 @@ Better Webhook provides two independent tools that solve these problems:
 **Building webhook handlers?** → [Get started with the SDK](/docs/sdk)
 
 Both tools work great together but are completely independent. Use whichever fits your needs.
-
