--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -3,8 +3,8 @@ title: CLI Getting Started
 description: Install the Better Webhook CLI and start capturing, replaying, and testing webhooks locally in minutes.
 ---
 
-import { Steps, Step } from 'fumadocs-ui/components/steps';
-import { Callout } from 'fumadocs-ui/components/callout';
+import { Steps, Step } from "fumadocs-ui/components/steps";
+import { Callout } from "fumadocs-ui/components/callout";
 
 # CLI Getting Started
 
@@ -39,6 +39,7 @@ The fastest way to get started is with the dashboard command, which starts both 
     This starts:
     - **Dashboard UI** at `http://localhost:4000`
     - **Capture Server** at `http://localhost:3001`
+
   </Step>
 
   <Step>
@@ -53,12 +54,14 @@ The fastest way to get started is with the dashboard command, which starts both 
     <Callout type="info">
       Use a tunnel service like ngrok or cloudflared to expose the capture server if your webhook source can't reach localhost.
     </Callout>
+
   </Step>
 
   <Step>
     ### Trigger a Webhook
 
     Perform an action that triggers a webhook (push code, create an issue, etc.). The webhook will be captured and appear in the dashboard.
+
   </Step>
 
   <Step>
@@ -71,6 +74,7 @@ The fastest way to get started is with the dashboard command, which starts both 
     ```
 
     You can replay the same webhook as many times as needed while debugging.
+
   </Step>
 </Steps>
 
@@ -110,4 +114,3 @@ Templates include proper headers and can generate valid signatures when you prov
 
 - [Command Reference](/docs/cli/commands) — Full documentation for all CLI commands
 - [Templates](/docs/cli/templates) — Learn about available templates and how to use them
-
