--- a/apps/docs/content/docs/sdk/adapters.mdx
+++ b/apps/docs/content/docs/sdk/adapters.mdx
@@ -3,7 +3,7 @@ title: Framework Adapters
 description: Integrate Better Webhook with Next.js, Express, and NestJS.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';
+import { Callout } from "fumadocs-ui/components/callout";
 
 # Framework Adapters
 
@@ -23,10 +23,9 @@ The Next.js adapter works with the App Router's route handlers.
 import { github } from "@better-webhook/github";
 import { toNextJS } from "@better-webhook/nextjs";
 
-const webhook = github()
-  .event("push", async (payload) => {
-    console.log(`Push to ${payload.repository.name}`);
-  });
+const webhook = github().event("push", async (payload) => {
+  console.log(`Push to ${payload.repository.name}`);
+});
 
 export const POST = toNextJS(webhook);
 ```
@@ -37,7 +36,7 @@ export const POST = toNextJS(webhook);
 export const POST = toNextJS(webhook, {
   // Override the secret (instead of using provider or env var)
   secret: process.env.GITHUB_WEBHOOK_SECRET,
-  
+
   // Callback after successful processing
   onSuccess: async (eventType) => {
     console.log(`Successfully processed ${eventType}`);
@@ -47,14 +46,14 @@ export const POST = toNextJS(webhook, {
 
 ### Response Behavior
 
-| Status | Condition |
-|--------|-----------|
-| `200` | Handler executed successfully |
-| `204` | No handler registered for this event type |
-| `400` | Invalid JSON body or schema validation failed |
-| `401` | Signature verification failed |
-| `405` | Request method is not POST |
-| `500` | Handler threw an error |
+| Status | Condition                                     |
+| ------ | --------------------------------------------- |
+| `200`  | Handler executed successfully                 |
+| `204`  | No handler registered for this event type     |
+| `400`  | Invalid JSON body or schema validation failed |
+| `401`  | Signature verification failed                 |
+| `405`  | Request method is not POST                    |
+| `500`  | Handler threw an error                        |
 
 ---
 
@@ -75,16 +74,15 @@ import { toExpress } from "@better-webhook/express";
 
 const app = express();
 
-const webhook = github()
-  .event("push", async (payload) => {
-    console.log(`Push to ${payload.repository.name}`);
-  });
+const webhook = github().event("push", async (payload) => {
+  console.log(`Push to ${payload.repository.name}`);
+});
 
 // Important: use express.raw() for this route
 app.post(
   "/webhooks/github",
   express.raw({ type: "application/json" }),
-  toExpress(webhook)
+  toExpress(webhook),
 );
 
 app.listen(3000);
@@ -105,7 +103,7 @@ app.post(
     onSuccess: async (eventType) => {
       console.log(`Processed ${eventType}`);
     },
-  })
+  }),
 );
 ```
 
@@ -120,20 +118,23 @@ const githubWebhook = github().event("push", async (payload) => {
   // Handle GitHub
 });
 
-const ragieWebhook = ragie().event("document_status_updated", async (payload) => {
-  // Handle Ragie
-});
+const ragieWebhook = ragie().event(
+  "document_status_updated",
+  async (payload) => {
+    // Handle Ragie
+  },
+);
 
 app.post(
   "/webhooks/github",
   express.raw({ type: "application/json" }),
-  toExpress(githubWebhook)
+  toExpress(githubWebhook),
 );
 
 app.post(
   "/webhooks/ragie",
   express.raw({ type: "application/json" }),
-  toExpress(ragieWebhook)
+  toExpress(ragieWebhook),
 );
 ```
 
@@ -157,10 +158,9 @@ import { toNestJS } from "@better-webhook/nestjs";
 
 @Controller("webhooks")
 export class WebhooksController {
-  private webhook = github()
-    .event("push", async (payload) => {
-      console.log(`Push to ${payload.repository.name}`);
-    });
+  private webhook = github().event("push", async (payload) => {
+    console.log(`Push to ${payload.repository.name}`);
+  });
 
   @Post("github")
   async handleGitHub(@Req() req: Request, @Res() res: Response) {
@@ -180,7 +180,7 @@ import { AppModule } from "./app.module";
 
 async function bootstrap() {
   const app = await NestFactory.create(AppModule, {
-    rawBody: true,  // Enable raw body
+    rawBody: true, // Enable raw body
   });
   await app.listen(3000);
 }
@@ -188,7 +188,9 @@ bootstrap();
 ```
 
 <Callout type="warn">
-  Without `rawBody: true`, the adapter will attempt to re-serialize the parsed body, which may not match the original and cause signature verification to fail.
+  Without `rawBody: true`, the adapter will attempt to re-serialize the parsed
+  body, which may not match the original and cause signature verification to
+  fail.
 </Callout>
 
 ### With Options
@@ -202,7 +204,7 @@ async handleGitHub(@Req() req: Request, @Res() res: Response) {
       console.log(`Processed ${eventType}`);
     },
   });
-  
+
   const result = await handler(req);
   return res.status(result.statusCode).json(result.body);
 }
@@ -227,10 +229,10 @@ This gives you control over the response, allowing you to add headers, transform
 
 All adapters accept the same options:
 
-| Option | Type | Description |
-|--------|------|-------------|
-| `secret` | `string` | Webhook secret for signature verification. Overrides provider secret and environment variables. |
-| `onSuccess` | `(eventType: string) => void \| Promise<void>` | Callback invoked after successful webhook processing. Errors from this callback are ignored. |
+| Option      | Type                                           | Description                                                                                     |
+| ----------- | ---------------------------------------------- | ----------------------------------------------------------------------------------------------- |
+| `secret`    | `string`                                       | Webhook secret for signature verification. Overrides provider secret and environment variables. |
+| `onSuccess` | `(eventType: string) => void \| Promise<void>` | Callback invoked after successful webhook processing. Errors from this callback are ignored.    |
 
 ### Secret Resolution Order
 
@@ -243,6 +245,6 @@ When verifying signatures, the SDK looks for a secret in this order:
 If no secret is found, signature verification is skipped.
 
 <Callout type="warn">
-  Always configure a secret in production. Without signature verification, anyone can send fake webhooks to your endpoint.
+  Always configure a secret in production. Without signature verification,
+  anyone can send fake webhooks to your endpoint.
 </Callout>
-
