feat: integrate GCP Cloud Functions support and enhance documentation
- Added GCP Cloud Functions as a supported framework in the SDK, allowing seamless integration with better-webhook handlers.
- Updated various components and documentation to reflect the inclusion of GCP Cloud Functions, including installation instructions and usage examples.
- Enhanced descriptions in the documentation to include GCP Cloud Functions alongside existing frameworks like Next.js, Express, and NestJS.
- Improved the SDK installation guide to provide package manager options for all supported frameworks.

--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -4,6 +4,7 @@ description: Install the Better Webhook CLI and start capturing, replaying, and 
 ---
 
 import { Steps, Step } from "fumadocs-ui/components/steps";
+import { Tab, Tabs } from "fumadocs-ui/components/tabs";
 import { Callout } from "fumadocs-ui/components/callout";
 
 # CLI Getting Started
@@ -14,9 +15,11 @@ The Better Webhook CLI is a local development tool for capturing, replaying, and
 
 Install the CLI globally:
 
-```bash
-npm install -g @better-webhook/cli
-```
+<Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
+  <Tab value="npm">```bash npm install -g @better-webhook/cli ```</Tab>
+  <Tab value="pnpm">```bash pnpm add -g @better-webhook/cli ```</Tab>
+  <Tab value="yarn">```bash yarn global add @better-webhook/cli ```</Tab>
+</Tabs>
 
 Verify the installation:
 
