--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -34,7 +34,7 @@ Better Webhook provides two independent tools that solve these problems:
   <Card
     icon={<Code2 />}
     title="SDK Packages"
-    description="Type-safe webhook handlers with automatic signature verification. Works with Next.js, Express, and NestJS."
+    description="Type-safe webhook handlers with automatic signature verification. Works with Next.js, Express, NestJS, and GCP Cloud Functions."
     href="/docs/sdk"
   />
 </Cards>
