--- a/apps/docs/content/docs/sdk/adapters.mdx
+++ b/apps/docs/content/docs/sdk/adapters.mdx
@@ -1,8 +1,9 @@
 ---
 title: Framework Adapters
-description: Integrate Better Webhook with Next.js, Express, and NestJS.
+description: Integrate Better Webhook with Next.js, Express, NestJS, and GCP Cloud Functions.
 ---
 
+import { Tab, Tabs } from "fumadocs-ui/components/tabs";
 import { Callout } from "fumadocs-ui/components/callout";
 
 # Framework Adapters
@@ -11,9 +12,11 @@ Adapters convert the webhook builder into framework-specific handlers. Each adap
 
 ## Next.js
 
-```bash
-npm install @better-webhook/nextjs
-```
+<Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
+  <Tab value="npm">```bash npm install @better-webhook/nextjs ```</Tab>
+  <Tab value="pnpm">```bash pnpm add @better-webhook/nextjs ```</Tab>
+  <Tab value="yarn">```bash yarn add @better-webhook/nextjs ```</Tab>
+</Tabs>
 
 The Next.js adapter works with the App Router's route handlers.
 
@@ -59,9 +62,11 @@ export const POST = toNextJS(webhook, {
 
 ## Express
 
-```bash
-npm install @better-webhook/express
-```
+<Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
+  <Tab value="npm">```bash npm install @better-webhook/express ```</Tab>
+  <Tab value="pnpm">```bash pnpm add @better-webhook/express ```</Tab>
+  <Tab value="yarn">```bash yarn add @better-webhook/express ```</Tab>
+</Tabs>
 
 The Express adapter returns a middleware function.
 
@@ -142,9 +147,11 @@ app.post(
 
 ## NestJS
 
-```bash
-npm install @better-webhook/nestjs
-```
+<Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
+  <Tab value="npm">```bash npm install @better-webhook/nestjs ```</Tab>
+  <Tab value="pnpm">```bash pnpm add @better-webhook/nestjs ```</Tab>
+  <Tab value="yarn">```bash yarn add @better-webhook/nestjs ```</Tab>
+</Tabs>
 
 The NestJS adapter returns an async function that processes the request and returns a result object.
 
@@ -222,6 +229,87 @@ interface NestJSResult {
 ```
 
 This gives you control over the response, allowing you to add headers, transform the body, or perform additional logic before responding.
+
+---
+
+## GCP Cloud Functions
+
+<Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
+  <Tab value="npm">```bash npm install @better-webhook/gcp-functions ```</Tab>
+  <Tab value="pnpm">```bash pnpm add @better-webhook/gcp-functions ```</Tab>
+  <Tab value="yarn">```bash yarn add @better-webhook/gcp-functions ```</Tab>
+</Tabs>
+
+The GCP Cloud Functions adapter works with both 1st and 2nd generation Cloud Functions.
+
+### Basic Usage (2nd Gen)
+
+```ts title="index.ts"
+import { http } from "@google-cloud/functions-framework";
+import { ragie } from "@better-webhook/ragie";
+import { toGCPFunction } from "@better-webhook/gcp-functions";
+
+const webhook = ragie().event("document_status_updated", async (payload) => {
+  console.log(`Document ${payload.document_id} is now ${payload.status}`);
+});
+
+http("webhookHandler", toGCPFunction(webhook));
+```
+
+### Basic Usage (1st Gen)
+
+```ts title="index.ts"
+import { ragie } from "@better-webhook/ragie";
+import { toGCPFunction } from "@better-webhook/gcp-functions";
+
+const webhook = ragie().event("document_status_updated", async (payload) => {
+  console.log(`Document ${payload.document_id} is now ${payload.status}`);
+});
+
+export const webhookHandler = toGCPFunction(webhook);
+```
+
+### With Options
+
+```ts
+http(
+  "webhookHandler",
+  toGCPFunction(webhook, {
+    secret: process.env.RAGIE_WEBHOOK_SECRET,
+    onSuccess: async (eventType) => {
+      console.log(`Processed ${eventType}`);
+    },
+  }),
+);
+```
+
+### Raw Body for Signature Verification
+
+GCP Cloud Functions with the Functions Framework provide `req.rawBody` automatically. The adapter checks for raw body in this order:
+
+1. `req.rawBody` (Functions Framework default)
+2. Buffer body
+3. String body
+4. `JSON.stringify(req.body)` as fallback
+
+<Callout type="warn">
+  If using a custom setup without raw body preservation, signature verification
+  may fail due to JSON serialization differences.
+</Callout>
+
+### Deployment
+
+Deploy using gcloud CLI:
+
+```bash
+gcloud functions deploy webhookHandler \
+  --gen2 \
+  --runtime nodejs20 \
+  --trigger-http \
+  --allow-unauthenticated \
+  --entry-point webhookHandler \
+  --set-env-vars RAGIE_WEBHOOK_SECRET=your-secret
+```
 
 ---
 
